src/test/ui/const-generics/min_const_generics/const-expression-suggest-missing-braces.stderr
error: expected one of `,` or `>`, found `3`
  --> $DIR/const-expression-suggest-missing-braces.rs:6:17
   |
LL |     foo::<BAR + 3>();
   |                 ^ expected one of `,` or `>`
   |
help: expressions must be enclosed in braces to be used as const generic arguments
   |
LL |     foo::<{ BAR + 3 }>();
   |           ^         ^

error: expressions must be enclosed in braces to be used as const generic arguments
  --> $DIR/const-expression-suggest-missing-braces.rs:19:11
   |
LL |     foo::<3 + 3>();
   |           ^^^^^
   |
help: enclose the `const` expression in braces
   |
LL |     foo::<{ 3 + 3 }>();
   |           ^       ^

error: expected one of `,` or `>`, found `-`
  --> $DIR/const-expression-suggest-missing-braces.rs:22:15
   |
LL |     foo::<BAR - 3>();
   |               ^ expected one of `,` or `>`
   |
help: expressions must be enclosed in braces to be used as const generic arguments
   |
LL |     foo::<{ BAR - 3 }>();
   |           ^         ^

error: expected one of `,` or `>`, found `-`
  --> $DIR/const-expression-suggest-missing-braces.rs:25:15
   |
LL |     foo::<BAR - BAR>();
   |               ^ expected one of `,` or `>`
   |
help: expressions must be enclosed in braces to be used as const generic arguments
   |
LL |     foo::<{ BAR - BAR }>();
   |           ^           ^

error: expressions must be enclosed in braces to be used as const generic arguments
  --> $DIR/const-expression-suggest-missing-braces.rs:28:11
   |
LL |     foo::<100 - BAR>();
   |           ^^^^^^^^^
   |
help: enclose the `const` expression in braces
   |
LL |     foo::<{ 100 - BAR }>();
   |           ^           ^

error: expected one of `,` or `>`, found `(`
  --> $DIR/const-expression-suggest-missing-braces.rs:31:19
   |
LL |     foo::<bar<i32>()>();
   |                   ^ expected one of `,` or `>`
   |
help: expressions must be enclosed in braces to be used as const generic arguments
   |
LL |     foo::<{ bar<i32>() }>();
   |           ^            ^

error: expected one of `,` or `>`, found `(`
  --> $DIR/const-expression-suggest-missing-braces.rs:34:21
   |
LL |     foo::<bar::<i32>()>();
   |                     ^ expected one of `,` or `>`
   |
help: expressions must be enclosed in braces to be used as const generic arguments
   |
LL |     foo::<{ bar::<i32>() }>();
   |           ^              ^

error: expected one of `,` or `>`, found `(`
  --> $DIR/const-expression-suggest-missing-braces.rs:37:21
   |
LL |     foo::<bar::<i32>() + BAR>();
   |                     ^ expected one of `,` or `>`
   |
help: expressions must be enclosed in braces to be used as const generic arguments
   |
LL |     foo::<{ bar::<i32>() + BAR }>();
   |           ^                    ^

error: expected one of `,` or `>`, found `(`
  --> $DIR/const-expression-suggest-missing-braces.rs:40:21
   |
LL |     foo::<bar::<i32>() - BAR>();
   |                     ^ expected one of `,` or `>`
   |
help: expressions must be enclosed in braces to be used as const generic arguments
   |
LL |     foo::<{ bar::<i32>() - BAR }>();
   |           ^                    ^

error: expected one of `,` or `>`, found `-`
  --> $DIR/const-expression-suggest-missing-braces.rs:43:15
   |
LL |     foo::<BAR - bar::<i32>()>();
   |               ^ expected one of `,` or `>`
   |
help: expressions must be enclosed in braces to be used as const generic arguments
   |
LL |     foo::<{ BAR - bar::<i32>() }>();
   |           ^                    ^

error: expected one of `,` or `>`, found `-`
  --> $DIR/const-expression-suggest-missing-braces.rs:46:15
   |
LL |     foo::<BAR - bar::<i32>()>();
   |               ^ expected one of `,` or `>`
   |
help: expressions must be enclosed in braces to be used as const generic arguments
   |
LL |     foo::<{ BAR - bar::<i32>() }>();
   |           ^                    ^

error[E0404]: expected trait, found constant `BAR`
  --> $DIR/const-expression-suggest-missing-braces.rs:11:11
   |
LL |     foo::<BAR + BAR>();
   |           ^^^ not a trait

error[E0404]: expected trait, found constant `BAR`
  --> $DIR/const-expression-suggest-missing-braces.rs:11:17
   |
LL |     foo::<BAR + BAR>();
   |                 ^^^ not a trait

warning: trait objects without an explicit `dyn` are deprecated
  --> $DIR/const-expression-suggest-missing-braces.rs:11:11
   |
LL |     foo::<BAR + BAR>();
   |           ^^^^^^^^^ help: use `dyn`: `dyn BAR + BAR`
   |
   = note: `#[warn(bare_trait_objects)]` on by default
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in the 2021 edition!
   = note: for more information, see issue #80165 <https://github.com/rust-lang/rust/issues/80165>

error[E0747]: type provided when a constant was expected
  --> $DIR/const-expression-suggest-missing-braces.rs:11:11
   |
LL |     foo::<BAR + BAR>();
   |           ^^^^^^^^^

error: aborting due to 14 previous errors; 1 warning emitted

Some errors have detailed explanations: E0404, E0747.
For more information about an error, try `rustc --explain E0404`.
